Mobile nav dropdown fixes and committee images (#302)
* fixed navbar staying when link changes

* fix mobile nav dropdown push content

* also fix committee images not showing up on mobile

--- a/src/styles/sections/CommitteesSection.module.css
+++ b/src/styles/sections/CommitteesSection.module.css
@@ -52,6 +52,7 @@
 .mobileImage {
   display: none;
   flex: 0;
+  height: auto;
 }
 
 @media (max-width: 875px) {
@@ -96,7 +97,7 @@
 
 .window {
   flex: 1;
-  width:;
+  width: auto;
 }
 
 .windowImage {
